ci: Add cache key salt

--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -48,6 +48,7 @@ jobs:
             emsdk/upstream
           key: >-
             emscripten-sdk-cache-${{ hashFiles(
+              'ci/cache-key-salt/emscripten.txt',
               'emsdk/emsdk_manifest.json'
             ) }}
 
