--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -47,6 +47,7 @@ jobs:
             ${{ github.workspace }}/vcpkg
           key: >-
             ${{ runner.os }}-vcpkg-archives-cache-${{ hashFiles(
+              'ci/cache-key-salt/macos.txt',
               'vcpkg/ports/boost-test/vcpkg.json',
               'vcpkg/ports/sdl2/vcpkg.json'
             ) }}
