--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -56,15 +56,15 @@ jobs:
         run: ./vcpkg/bootstrap-vcpkg.sh -disableMetrics
 
       - name: Install boost-test
-        run: sudo ./vcpkg/vcpkg install boost-test
+        run: ./vcpkg/vcpkg install boost-test
 
       - name: Install pkg-config
         run: brew install pkg-config
 
       - name: Install SDL2
         run: |-
-          sudo ./vcpkg/vcpkg install sdl2 --triplet x64-osx-dynamic
-          sudo ./vcpkg/vcpkg install sdl2 --triplet arm64-osx-dynamic
+          ./vcpkg/vcpkg install --triplet x64-osx-dynamic sdl2
+          ./vcpkg/vcpkg install --triplet arm64-osx-dynamic sdl2
 
       - name: Make build script executable
         run: chmod +x xcode/Tromino2d/scripts/uni.sh
