--- a/msbuild/TrominoCli/TrominoCli.vcxproj
+++ b/msbuild/TrominoCli/TrominoCli.vcxproj
@@ -68,7 +68,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_WINDOWS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\include;$(SolutionDir)..\include\tromino\cli;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
@@ -86,7 +86,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);_WINDOWS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\include;$(SolutionDir)..\include\tromino\cli;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
@@ -117,13 +117,13 @@
     <ClCompile Include="..\..\src\cli\wrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\cli\cli_models.hpp" />
-    <ClInclude Include="..\..\src\cli\cli_options.hpp" />
-    <ClInclude Include="..\..\src\cli\init.hpp" />
-    <ClInclude Include="..\..\src\cli\trmn_graph.hpp" />
-    <ClInclude Include="..\..\src\cli\trmn_graph_vt.hpp" />
-    <ClInclude Include="..\..\src\cli\trmn_graph_windows.hpp" />
-    <ClInclude Include="..\..\src\cli\wrapper.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\cli_models.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\cli_options.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\init.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\trmn_graph.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\trmn_graph_vt.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\trmn_graph_windows.hpp" />
+    <ClInclude Include="..\..\include\tromino\cli\wrapper.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
