--- a/msbuild/TrominoCli/TrominoCli.vcxproj.filters
+++ b/msbuild/TrominoCli/TrominoCli.vcxproj.filters
@@ -35,25 +35,25 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\cli\cli_models.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\cli_models.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\cli\cli_options.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\cli_options.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\cli\init.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\init.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\cli\trmn_graph.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\trmn_graph.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\cli\trmn_graph_windows.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\trmn_graph_windows.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\cli\trmn_graph_vt.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\trmn_graph_vt.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\cli\wrapper.hpp">
+    <ClInclude Include="..\..\include\tromino\cli\wrapper.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
