--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -7,12 +7,9 @@
 name: Emscripten build for WebAssembly
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
-      - main
+      - feature/ci-emscripten-dev
   workflow_dispatch:
 
 permissions: {}
@@ -24,17 +21,60 @@ jobs:
 
     env:
       BUILD_PATH: ${{ github.workspace }}/tromino-puzzle/dist/web
-      EMSDK_VERSION: 3.1.47
 
     outputs:
       dist-checksum: ${{ steps.dist-checksum.outputs.dist_checksum }}
 
     steps:
+      - name: Install LLVM
+        run: |-
+          wget --no-check-certificate -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy main'
+          sudo add-apt-repository 'deb-src http://apt.llvm.org/jammy/ llvm-toolchain-jammy main'
+          sudo apt update
+          sudo apt-get install python3-lldb-18
+          # LLVM
+          sudo apt-get install libllvm-18-ocaml-dev libllvm18 llvm-18 llvm-18-dev llvm-18-doc llvm-18-examples llvm-18-runtime
+          # Clang and co
+          sudo apt-get install clang-18 clang-tools-18 clang-18-doc libclang-common-18-dev libclang-18-dev libclang1-18 clang-format-18 python3-clang-18 clangd-18 clang-tidy-18
+          # compiler-rt
+          sudo apt-get install libclang-rt-18-dev
+          # polly
+          sudo apt-get install libpolly-18-dev
+          # libfuzzer
+          sudo apt-get install libfuzzer-18-dev
+          # lld (linker)
+          sudo apt-get install lld-18
+          # libc++
+          sudo apt-get install libc++-18-dev libc++abi-18-dev
+          # OpenMP
+          sudo apt-get install libomp-18-dev
+          # libclc
+          sudo apt-get install libclc-18-dev
+          # libunwind
+          sudo apt-get install libunwind-18-dev
+          # mlir
+          sudo apt-get install libmlir-18-dev mlir-18-tools
+          # bolt
+          sudo apt-get install libbolt-18-dev bolt-18
+          # flang
+          sudo apt-get install flang-18
+          # wasm support
+          sudo apt-get install libclang-rt-18-dev-wasm32 libclang-rt-18-dev-wasm64 libc++-18-dev-wasm32 libc++abi-18-dev-wasm32 libclang-rt-18-dev-wasm32 libclang-rt-18-dev-wasm64
+          sudo apt-get install clang lld llvm llvm-dev clang-tools
+          # sudo apt-get install clang-format clang-tidy clang-tools clang clangd libc++-dev libc++1 libc++abi-dev libc++abi1 libclang-dev libclang1 liblldb-dev libllvm-ocaml-dev libomp-dev libomp5 lld lldb llvm-dev llvm-runtime llvm python3-clang
+          sudo apt-get install clang-format clang-tidy clang-tools clang clangd libc++-dev libc++1 libc++abi-dev libc++abi1 libclang-dev libclang1 libllvm-ocaml-dev libomp-dev libomp5 lld llvm-dev llvm-runtime llvm python3-clang
+      - name: Install binaryen
+        run: |-
+          sudo add-apt-repository universe
+          sudo apt update
+          sudo apt install binaryen
+
       - name: Check out Emscripten repository
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
         with:
-          ref: ${{ env.EMSDK_VERSION }}
-          repository: emscripten-core/emsdk
+          ref: main # DONT-MERGE/strict-fixes
+          repository: oboukli/emscripten
           path: emsdk
           persist-credentials: false
 
@@ -47,15 +87,17 @@ jobs:
             emsdk/node
             emsdk/upstream
           key: >-
-            emscripten-sdk-cache-${{ hashFiles(
+            emscripten-sdk-cache-FORK-${{ hashFiles(
               'ci/cache-key-salt/emscripten.txt',
               'emsdk/emsdk_manifest.json'
             ) }}
 
+      # ./emsdk install
+      # ./emsdk activate
       - name: Install Emscripten SDK
         run: |-
-          ./emsdk install '${{ env.EMSDK_VERSION }}'
-          ./emsdk activate '${{ env.EMSDK_VERSION }}'
+          ./emcc --generate-config
+          ./bootstrap
         working-directory: emsdk
 
       - name: Check out main repository
@@ -64,10 +106,10 @@ jobs:
           path: tromino-puzzle
           persist-credentials: false
 
+      # source ${{ github.workspace }}/emsdk/emsdk_env.sh
       - name: Make
         run: |-
-          source ${{ github.workspace }}/emsdk/emsdk_env.sh
-          emmake make --jobs=$((($(nproc) * 15) / 10))
+          /home/runner/work/tromino-puzzle/tromino-puzzle/emsdk/emmake make --jobs=$((($(nproc) * 15) / 10))
         working-directory: tromino-puzzle/emscripten
 
       - name: Create distribution archive
@@ -98,64 +140,3 @@ jobs:
           if-no-files-found: error
           name: tromino-puzzle-web-dist
           path: ${{ env.BUILD_PATH }}/dist.tar
-
-  deploy-gh-pages:
-    name: Publish
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    permissions:
-      contents: write
-
-    steps:
-      - name: Check out GitHub Pages branch
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
-        with:
-          ref: gh-pages
-
-      - name: Remove current files
-        run: git rm -r '*'
-
-      - name: Download distribution archive
-        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
-        with:
-          name: tromino-puzzle-web-dist
-
-      - name: Verify checksum of distribution archive
-        run: >-
-          echo '${{ needs.build.outputs.dist-checksum }}'
-          | sha512sum --check
-
-      - name: Extract distribution archive
-        run: |-
-          tar --extract --file=dist.tar
-          rm './dist.tar'
-
-      - name: Display file structure
-        run: ls -R
-
-      - name: Configure Git committer information
-        run: |-
-          git config --global user.name 'Continuous Deployment Job'
-          git config --global user.email 'oboukli@users.noreply.github.com'
-
-      - name: Avoid mutating text files by Git
-        run: echo '* -text' > '.gitattributes'
-
-      - name: Bypass Jekyll on GitHub Pages
-        run: touch .nojekyll
-
-      - name: Update Git index
-        run: git add --all -- ':!.gitattributes'
-
-      - name: Git status
-        run: git status
-
-      - name: Push to GitHub Pages branch
-        run: |-
-          if git diff HEAD --exit-code --stat ; then
-            echo 'No changes found. Push skipped.'
-          else
-            git commit --amend --all --date=now --message='Automated deployment'
-            git push --force
-          fi
