--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -24,42 +24,44 @@ jobs:
 
     env:
       BUILD_PATH: ${{ github.workspace }}/xcode/build
+      VCPKG_BINARY_SOURCES: clear;x-gha,readwrite
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
 
       - name: Check out vcpkg
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: microsoft/vcpkg
           path: ${{ github.workspace }}/vcpkg
           persist-credentials: false
 
-      - name: Apply vcpkg cache
-        id: vcpkg-cache
-        uses: actions/cache@v3
+      - name: Export GitHub Actions cache environment variables
+        uses: actions/github-script@v7
         with:
-          path: |-
-            $HOME/.cache/vcpkg/archives
-            ${{ github.workspace }}/vcpkg
-          key: >-
-            ${{ runner.os }}-vcpkg-archives-cache-${{ hashFiles(
-              'ci/cache-key-salt/macos.txt',
-              'vcpkg/ports/boost-test/vcpkg.json',
-              'vcpkg/ports/sdl2/vcpkg.json'
-            ) }}
+          script: |-
+            core.exportVariable(
+              'ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || ''
+            );
+            core.exportVariable(
+              'ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || ''
+            );
+
+      - name: Set default Xcode release
+        env:
+          XCODE_RELEASE: "16.0"
+        run: >-
+          sudo xcode-select
+          -switch '/Applications/Xcode_${{ env.XCODE_RELEASE }}.app'
 
       - name: Bootstrap vcpkg
         run: ./vcpkg/bootstrap-vcpkg.sh -disableMetrics
 
       - name: Install boost-test
         run: ./vcpkg/vcpkg install boost-test
-
-      - name: Install pkg-config
-        run: brew install pkg-config
 
       - name: Install SDL2
         run: |-
@@ -75,7 +77,6 @@ jobs:
           -workspace TrominoPuzzle.xcworkspace
           -scheme TrominoCli
           -configuration Release
-          -destination 'platform=macOS,arch=x86_64'
           CONFIGURATION_BUILD_DIR=${{ env.BUILD_PATH }}
           build
         working-directory: xcode
@@ -91,7 +92,7 @@ jobs:
         working-directory: xcode
 
       - name: Build unit tests
-        run: >-
+        run: >
           xcodebuild
           -workspace TrominoPuzzle.xcworkspace
           -scheme UnitTests
@@ -105,7 +106,7 @@ jobs:
         working-directory: ${{ env.BUILD_PATH }}
 
       - name: Compute SHA512 of artifacts
-        run: |-
+        run: |
           ls -Al | grep -v '^d'
           shasum --algorithm 512 --binary UnitTests
           shasum --algorithm 512 --binary libSDL2-2.0.0.dylib
