--- a/.github/workflows/msvc-code-analysis.yml
+++ b/.github/workflows/msvc-code-analysis.yml
@@ -27,12 +27,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
 
       - name: Check out vcpkg
-        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+        uses: actions/checkout@v4
         with:
           repository: microsoft/vcpkg
           path: ${{ github.workspace }}\vcpkg
@@ -51,7 +51,7 @@ jobs:
         run: cmake -B ${{ env.build }} -DCMAKE_BUILD_TYPE=${{ env.config }}
 
       - name: Initialize MSVC Code Analysis
-        uses: microsoft/msvc-code-analysis-action@24c285ab36952c9e9182f4b78dfafbac38a7e5ee
+        uses: microsoft/msvc-code-analysis-action@v0
         id: run-analysis
         with:
           buildConfiguration: ${{ env.config }}
@@ -59,12 +59,12 @@ jobs:
           ruleset: NativeRecommendedRules.ruleset
 
       - name: Upload result to GitHub
-        uses: github/codeql-action/upload-sarif@8e0b1c74b1d5a0077b04d064c76ee714d3da7637
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: ${{ steps.run-analysis.outputs.sarif }}
 
       - name: Upload result as an artifact
-        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32
+        uses: actions/upload-artifact@v4
         with:
           name: sarif-file
           path: ${{ steps.run-analysis.outputs.sarif }}
