--- a/.github/workflows/openssf-scorecard.yml
+++ b/.github/workflows/openssf-scorecard.yml
@@ -30,17 +30,17 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # tag: v3.6.0
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
 
       - name: Run analysis
-        uses: ossf/scorecard-action@08b4669551908b1024bb425080c797723083c031 # tag: v2.2.0
+        uses: ossf/scorecard-action@v2
         with:
           results_file: openssf-scorecard.sarif
           results_format: sarif
 
       - name: Report analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@e4262713b504983e61c7728f5452be240d9385a7 # tag: v2.14.3
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: openssf-scorecard.sarif
