--- a/.github/workflows/msvc-code-analysis.yml
+++ b/.github/workflows/msvc-code-analysis.yml
@@ -25,6 +25,9 @@ jobs:
     name: Analyze
     runs-on: windows-latest
 
+    env:
+      VCPKG_BINARY_SOURCES: clear;x-gha,readwrite
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -37,6 +40,17 @@ jobs:
           repository: microsoft/vcpkg
           path: ${{ github.workspace }}\vcpkg
           persist-credentials: false
+
+        - name: Export GitHub Actions cache environment variables
+          uses: actions/github-script@v7
+          with:
+            script: |-
+              core.exportVariable(
+                'ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || ''
+              );
+              core.exportVariable(
+                'ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || ''
+              );
 
       - name: Bootstrap vcpkg
         run: .\vcpkg\bootstrap-vcpkg.bat -disableMetrics
