--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -28,6 +28,7 @@ jobs:
       BUILD_PLATFORM: x64
       RELEASE_WORKDIR: ${{ github.workspace }}\msbuild\x64\Release\
       DEBUG_WORKDIR: ${{ github.workspace }}\msbuild\x64\Debug\
+      VCPKG_BINARY_SOURCES: clear;x-gha,readwrite
 
     steps:
       - name: Check out repository
@@ -42,22 +43,19 @@ jobs:
           path: ${{ github.workspace }}\vcpkg
           persist-credentials: false
 
+      - name: Export GitHub Actions cache environment variables
+        uses: actions/github-script@v7
+        with:
+          script: |-
+            core.exportVariable(
+              'ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || ''
+            );
+            core.exportVariable(
+              'ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || ''
+            );
+
       - name: Bootstrap vcpkg
         run: .\vcpkg\bootstrap-vcpkg.bat -disableMetrics
-
-      - name: Apply vcpkg cache
-        id: vcpkg-cache
-        uses: actions/cache@v4
-        with:
-          path: |-
-            %VCPKG_DEFAULT_BINARY_CACHE%
-            ${{ github.workspace }}\vcpkg
-          key: >-
-            ${{ runner.os }}-vcpkg-archives-cache-${{ hashFiles(
-              'ci/cache-key-salt/windows.txt',
-              'vcpkg/ports/boost-test/vcpkg.json',
-              'vcpkg/ports/sdl2/vcpkg.json'
-            ) }}
 
       - name: Install Boost.Test vcpkg package
         run: .\vcpkg install --triplet x64-windows-static boost-test
