--- a/.editorconfig
+++ b/.editorconfig
@@ -50,3 +50,11 @@ charset = utf-8
 end_of_line = crlf
 indent_size = 2
 indent_style = space
+
+[CMakeLists.txt]
+charset = utf-8
+end_of_line = lf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
